--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.4.5",
+    "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "~3.0.2",
-    "ember-cli-app-version": "^3.0.0",
+    "ember-cli": "^3.1.4",
+    "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^6.6.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.2.1",
@@ -29,23 +29,24 @@
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.1.1",
-    "ember-cli-sass": "^7.1.7",
+    "ember-cli-sass": "^7.2.0",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.0",
-    "ember-cli-uglify": "^2.0.0",
+    "ember-cli-uglify": "^2.1.0",
     "ember-data": "~3.0.0",
     "ember-export-application-global": "^2.0.0",
-    "ember-i18n": "^5.2.0",
+    "ember-i18n": "^5.2.1",
     "ember-leaflet": "^3.0.13",
-    "ember-load-initializers": "^1.0.0",
+    "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-resolver": "^4.0.0",
-    "ember-simple-auth": "^1.5.1",
+    "ember-resolver": "^4.5.5",
+    "ember-simple-auth": "^1.6.0",
+    "ember-simplemde": "^1.2.0",
     "ember-source": "~3.0.0",
     "ember-tag-input": "^1.2.1",
     "eslint-plugin-ember": "^5.0.0",
     "leaflet": "^1.3.1",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.7.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
